--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,30 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>statusCode_Success_2xx.Test_2xx</td>
+<td>statusCode_Redirection_3xx.Test_3xx</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validate_200_Ok</td>
+<td>validate_301_movedPermantly</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validate_201_Created</td>
+<td>validate_303_seeOther</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validate_203_NonAuthinfo</td>
+<td>validate_300_multipleChoices</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validate_202_Accepetd</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>validate_204_NoContent</td>
+<td>validate_302_Found</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
