--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,6 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>statusCode_Success_2xx.Test_2xx.validate_201_Created</td></tr>
-<tr><td>statusCode_Success_2xx.Test_2xx.validate_203_NonAuthinfo</td></tr>
-<tr><td>statusCode_Success_2xx.Test_2xx.validate_200_Ok</td></tr>
-<tr><td>statusCode_Success_2xx.Test_2xx.validate_202_Accepetd</td></tr>
+<tr><td>statusCode_Redirection_3xx.Test_3xx.validate_301_movedPermantly</td></tr>
+<tr><td>statusCode_Redirection_3xx.Test_3xx.validate_302_Found</td></tr>
+<tr><td>statusCode_Redirection_3xx.Test_3xx.validate_300_multipleChoices</td></tr>
 </table>
