--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,5 +1,11 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>statusCode_Redirection_3xx.Test_3xx.validate_301_movedPermantly</td></tr>
-<tr><td>statusCode_Redirection_3xx.Test_3xx.validate_302_Found</td></tr>
-<tr><td>statusCode_Redirection_3xx.Test_3xx.validate_300_multipleChoices</td></tr>
+<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_403_forbidden</td></tr>
+<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_406_notAcceptable</td></tr>
+<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_400_badRequest</td></tr>
+<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_405_methodNotAllowed</td></tr>
+<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_407_proxyAuthenticationRequired</td></tr>
+<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_402_paymentRequired</td></tr>
+<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_401_unauthorized</td></tr>
+<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_404_notFound</td></tr>
+<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_408_requestTime</td></tr>
 </table>
