finalise - http all possible status code understanding

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,50 +4,38 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>statusCode_ClientError_4xx.Test_4xx</td>
+<td>statusCode_ServerError_5xx.Test_5xx</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validate_406_notAcceptable</td>
+<td>validate_500_internalServerErr</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validate_409_conflict</td>
+<td>validate_503_serviceUnavailable</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validate_403_forbidden</td>
+<td>validate_522_ConnectionTimedOut</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validate_400_badRequest</td>
+<td>validate_502_badGateway</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validate_402_paymentRequired</td>
+<td>validate_504_gatewayTimeout</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validate_405_methodNotAllowed</td>
+<td>validate_511_networkAuthenticationRequired</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validate_408_requestTime</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>validate_404_notFound</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>validate_407_proxyAuthenticationRequired</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>validate_401_unauthorized</td>
+<td>validate_505_httpVersionUnsupported</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
