--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,11 +1,8 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_403_forbidden</td></tr>
-<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_406_notAcceptable</td></tr>
-<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_400_badRequest</td></tr>
-<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_405_methodNotAllowed</td></tr>
-<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_407_proxyAuthenticationRequired</td></tr>
-<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_402_paymentRequired</td></tr>
-<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_401_unauthorized</td></tr>
-<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_404_notFound</td></tr>
-<tr><td>statusCode_ClientError_4xx.Test_4xx.validate_408_requestTime</td></tr>
+<tr><td>statusCode_ServerError_5xx.Test_5xx.validate_511_networkAuthenticationRequired</td></tr>
+<tr><td>statusCode_ServerError_5xx.Test_5xx.validate_505_httpVersionUnsupported</td></tr>
+<tr><td>statusCode_ServerError_5xx.Test_5xx.validate_504_gatewayTimeout</td></tr>
+<tr><td>statusCode_ServerError_5xx.Test_5xx.validate_500_internalServerErr</td></tr>
+<tr><td>statusCode_ServerError_5xx.Test_5xx.validate_502_badGateway</td></tr>
+<tr><td>statusCode_ServerError_5xx.Test_5xx.validate_503_serviceUnavailable</td></tr>
 </table>
