--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8da5ba">  <td>19/08/22 16:44:02</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setupSpec()[pri:0, instance:statusCode_ClientError_4xx.Test_4xx@59309333]">&gt;&gt;setupSpec</td> 
+<tr bgcolor="8da5ba">  <td>19/08/27 15:59:27</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setupSpec()[pri:0, instance:statusCode_ServerError_5xx.Test_5xx@59309333]">&gt;&gt;setupSpec</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@210506412</td>   <td></td> </tr>
-<tr bgcolor="8da5ba">  <td>19/08/22 16:44:02</td>   <td>56</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupMainresourses()[pri:0, instance:statusCode_ClientError_4xx.Test_4xx@59309333]">&gt;&gt;setupMainresourses</td> 
+<tr bgcolor="8da5ba">  <td>19/08/27 15:59:27</td>   <td>53</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupMainresourses()[pri:0, instance:statusCode_ServerError_5xx.Test_5xx@59309333]">&gt;&gt;setupMainresourses</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@210506412</td>   <td></td> </tr>
-<tr bgcolor="7690be">  <td>19/08/22 16:44:02</td>   <td>85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_4xx.validate_409_conflict()[pri:0, instance:statusCode_ClientError_4xx.Test_4xx@59309333]">validate_409_conflict</td> 
+<tr bgcolor="7690be">  <td>19/08/27 15:59:27</td>   <td>78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_5xx.validate_522_ConnectionTimedOut()[pri:0, instance:statusCode_ServerError_5xx.Test_5xx@59309333]">validate_522_ConnectionTimedOut</td> 
   <td>main@210506412</td>   <td></td> </tr>
-<tr bgcolor="8da5ba">  <td>19/08/22 16:44:07</td>   <td>4215</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.closePrerequisites()[pri:0, instance:statusCode_ClientError_4xx.Test_4xx@59309333]">&lt;&lt;closePrerequisites</td> 
+<tr bgcolor="8da5ba">  <td>19/08/27 15:59:29</td>   <td>2167</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.closePrerequisites()[pri:0, instance:statusCode_ServerError_5xx.Test_5xx@59309333]">&lt;&lt;closePrerequisites</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@210506412</td>   <td></td> </tr>
 </table>
